# hector_rviz_overlay

./: .clang-format  .gitignore  LICENSE  README.md
hector_rviz_overlay/: CMakeLists.txt  Doxyfile  hector_rviz_overlay-extras.cmake  package.xml
hector_rviz_overlay/include/hector_rviz_overlay/: overlay.h  overlay.hpp  overlay_manager.h  overlay_manager.hpp  overlay_widget.hpp  path_helper.h  path_helper.hpp
hector_rviz_overlay/include/hector_rviz_overlay/displays/: overlay_display.h  overlay_display.hpp  qml_overlay_display.h  qml_overlay_display.hpp  qwidget_overlay_display.h  qwidget_overlay_display.hpp
hector_rviz_overlay/include/hector_rviz_overlay/events/: qwidget_event_manager.h  qwidget_event_manager.hpp
hector_rviz_overlay/include/hector_rviz_overlay/helper/: file_system_watcher.hpp  qml_rviz_context.h  qml_rviz_context.hpp  qml_rviz_property.h  qml_rviz_property.hpp  qml_tool_manager.h  qml_tool_manager.hpp  rviz_tool_icon_provider.h  rviz_tool_icon_provider.hpp
hector_rviz_overlay/include/hector_rviz_overlay/popup/: popup_container_widget.h  popup_container_widget.hpp  popup_dialog.h  popup_dialog.hpp  popup_overlay.h  popup_overlay.hpp  qwidget_popup_factory.h  qwidget_popup_factory.hpp  qwidget_popup_overlay.h  qwidget_popup_overlay.hpp
hector_rviz_overlay/include/hector_rviz_overlay/popup/positioning/: anchor_point.hpp  center_tracker.h  center_tracker.hpp  ogre_tracker.h  ogre_tracker.hpp  point_tracker.h  point_tracker.hpp  popup_move_bar.hpp
hector_rviz_overlay/include/hector_rviz_overlay/positioning/: ogre_position_tracker.h  ogre_position_tracker.hpp  position_tracker.hpp
hector_rviz_overlay/include/hector_rviz_overlay/render/: glx_overlay_renderer.h  glx_overlay_renderer.hpp  image_overlay_renderer.h  image_overlay_renderer.hpp  overlay_renderer.h  overlay_renderer.hpp  qimage_texture_overlay_renderer.hpp  qopengl_texture_overlay_renderer.hpp  qopengl_wrapper.hpp  renderer.hpp  texture_overlay_renderer.h  texture_overlay_renderer.hpp
hector_rviz_overlay/include/hector_rviz_overlay/ui/: qml_overlay.h  qml_overlay.hpp  qwidget_overlay.h  qwidget_overlay.hpp  ui_overlay.h  ui_overlay.hpp
hector_rviz_overlay/src/: logging.hpp  overlay.cpp  overlay_manager.cpp  overlay_widget.cpp  path_helper.cpp
hector_rviz_overlay/src/displays/: overlay_display.cpp  qml_overlay_display.cpp  qwidget_overlay_display.cpp
hector_rviz_overlay/src/events/: qwidget_event_manager.cpp
hector_rviz_overlay/src/helper/: file_system_watcher.cpp  qml_rviz_context.cpp  qml_rviz_property.cpp  qml_tool_manager.cpp  rviz_tool_icon_provider.cpp
hector_rviz_overlay/src/popup/: popup_container_widget.cpp  popup_dialog.cpp  popup_overlay.cpp  qwidget_popup_factory.cpp  qwidget_popup_overlay.cpp
hector_rviz_overlay/src/popup/positioning/: center_tracker.cpp  ogre_tracker.cpp  popup_move_bar.cpp
hector_rviz_overlay/src/positioning/: ogre_position_tracker.cpp  position_tracker.cpp
hector_rviz_overlay/src/render/: gl_helpers.h  glx_overlay_renderer.cpp  image_overlay_renderer.cpp  overlay_renderer.cpp  qimage_texture_overlay_renderer.cpp  qopengl_texture_overlay_renderer.cpp  qopengl_wrapper.cpp  qopengl_wrapper.hpp  texture_overlay_renderer.cpp
hector_rviz_overlay/src/ui/: qml_overlay.cpp  qwidget_overlay.cpp  ui_overlay.cpp
hector_rviz_overlay_controls/: CMakeLists.txt  package.xml  plugin_description.xml  rviz_common_plugins.xml
hector_rviz_overlay_controls/include/hector_rviz_overlay_controls/: qml_overlay_display.h  tools_overlay_display.h  tools_widget.h
hector_rviz_overlay_controls/src/: qml_overlay_display.cpp  tools_overlay_display.cpp  tools_widget.cpp
hector_rviz_overlay_controls/styles/: flat.qss  round.qss
hector_rviz_overlay_demo/: CMakeLists.txt  package.xml  plugin_description.xml  rviz_common_plugins.xml
hector_rviz_overlay_demo/include/hector_rviz_overlay_demo/: demo_overlay_display.h  demo_overlay_display.hpp  demo_qml_overlay_display.h  demo_qml_overlay_display.hpp  demo_qml_ros_overlay_display.h  demo_qml_ros_overlay_display.hpp
hector_rviz_overlay_demo/include/hector_rviz_overlay_demo/popups/: simple_popups_overlay_display.h  simple_popups_overlay_display.hpp
hector_rviz_overlay_demo/media/: demo_widget.ui  overlay.qml  overlay_ros.qml
hector_rviz_overlay_demo/src/: demo_overlay_display.cpp  demo_qml_overlay_display.cpp  demo_qml_ros_overlay_display.cpp
hector_rviz_overlay_demo/src/popups/: simple_popups_overlay_display.cpp
