<?xml version="1.0"?>
<package format="2">
  <name>hector_rviz_overlay</name>
  <version>1.0.0</version>
  <description>Provides an Overlay that can be used i.e. in a Display plugin to display additional information on top of the rivz RenderPanel.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/argo_robot_behavior_action_panel</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libqt5-widgets</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

</package>
