<?xml version="1.0"?>
<package format="2">
  <name>hector_rviz_overlay</name>
  <version>1.0.0</version>
  <description>Provides an Overlay that can be used i.e. in a Display plugin to display additional information on top of the rivz RenderPanel.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>GPLv3</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>libqt5-widgets</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

</package>
