<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_rviz_overlay</name>
  <version>1.0.0</version>
  <description>Provides an Overlay that can be used i.e. in a Display plugin to display additional information on top of the rivz RenderPanel.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>GPLv3</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
