<?xml version="1.0"?>
<package format="2">
  <name>hector_rviz_overlay_controls</name>
  <version>1.0.0</version>
  <description>Provides a display to render a QML file on top of the render panel and the tools panel as an overlay for the render panel.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <build_depend>hector_rviz_overlay</build_depend>
  <exec_depend>qml-module-qtquick2</exec_depend>
  <exec_depend>qml_ros2_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/rviz_common_plugins.xml"/>
  </export>
</package>
