<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_rviz_overlay_demo</name>
  <version>1.0.0</version>
  <description>Some examples on how to use hector_rviz_overlay.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <build_depend>hector_rviz_overlay</build_depend>
  <exec_depend>qml-module-qtquick2</exec_depend>
  <exec_depend>qml_ros2_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/rviz_common_plugins.xml"/>
  </export>
</package>
